--- a/plugin.yml
+++ b/plugin.yml
@@ -7,6 +7,7 @@ commands:
   broadcast:
     description: Simply Broadcast A Message.
     usage: "/broadcast <message>"
+    aliases: [bc, b]
     permission: broadcast.command
 permissions:
   broadcast.command:
